# ton-fast-indexer

./: CMakeLists.txt  build-fast-indexer.sh  commands.sh  main.Dockerfile
fast-indexer/: CMakeLists.txt  fast-indexer.cpp  fast-indexer.hpp
